objects/Solution.object
<CustomObject>
    <fields>
        <fullName>Article_Title__c</fullName>
        <formula>SolutionName</formula>
        <label>Article Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__DB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__Old_SolutionName__c</fullName>
        <label>Old Solution Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__Old_SolutionNote__c</fullName>
        <label>Old Solution Note</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>This is used to consistently import data to a version of the SDO and translate data into other languages.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Global__c</fullName>
        <label>Applicable Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Asia-Pac</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Notes__c</fullName>
        <description>Not visible to cusotmers</description>
        <inlineHelpText>This information is not visible to the customers in Portal\</inlineHelpText>
        <label>Internal Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <label>Keywords</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Org_Cust_Case_ID__c</fullName>
        <label>Org Cust Case ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Audience__c</fullName>
        <label>Primary Audience</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Delivery Personnel</fullName>
                </value>
                <value>
                    <fullName>Maintenance Technician</fullName>
                </value>
                <value>
                    <fullName>Pre Sales Engineer</fullName>
                </value>
                <value>
                    <fullName>Support Engineer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution_Expiration_Date__c</fullName>
        <label>Solution Expiration Date</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>AllReviewedSolutions</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SOLUTION.STATUS_CODE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Reviewed Solutions</label>
    </listViews>
    <listViews>
        <fullName>AllUnreviewedSolutions</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SOLUTION.STATUS_CODE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Unreviewed Solutions</label>
    </listViews>
</CustomObject>